@startuml

title __EXCEPTIONMAPPERS's Class Diagram__\n

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace exceptions {
        namespace exceptionMappers {
          class ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.DuplicateNameExceptionMapper {
              + toResponse()
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace exceptions {
        namespace exceptionMappers {
          class ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidGenderExceptionMapper {
              + toResponse()
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace exceptions {
        namespace exceptionMappers {
          class ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidResourceExceptionMapper {
              + toResponse()
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace exceptions {
        namespace exceptionMappers {
          class ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidSpeciesExceptionMapper {
              + toResponse()
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace exceptions {
        namespace exceptionMappers {
          class ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidWeightExceptionMapper {
              + toResponse()
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace exceptions {
        namespace exceptionMappers {
          class ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.NotExistentNameExceptionMapper {
              + toResponse()
          }
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace exceptions {
        namespace exceptionMappers {
          class ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.UnknownExceptionGrabber {
              + toResponse()
          }
        }
      }
    }
  }
  

  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.DuplicateNameExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.DuplicateNameExceptionMapper -up-|> ca.ulaval.glo4002.game.interfaces.rest.exceptions.ExceptionResponse
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidGenderExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidGenderExceptionMapper -up-|> ca.ulaval.glo4002.game.interfaces.rest.exceptions.ExceptionResponse
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidResourceExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidResourceExceptionMapper -up-|> ca.ulaval.glo4002.game.interfaces.rest.exceptions.ExceptionResponse
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidSpeciesExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidSpeciesExceptionMapper -up-|> ca.ulaval.glo4002.game.interfaces.rest.exceptions.ExceptionResponse
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidWeightExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.InvalidWeightExceptionMapper -up-|> ca.ulaval.glo4002.game.interfaces.rest.exceptions.ExceptionResponse
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.NotExistentNameExceptionMapper .up.|> javax.ws.rs.ext.ExceptionMapper
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.NotExistentNameExceptionMapper -up-|> ca.ulaval.glo4002.game.interfaces.rest.exceptions.ExceptionResponse
  ca.ulaval.glo4002.game.interfaces.rest.exceptions.exceptionMappers.UnknownExceptionGrabber .up.|> javax.ws.rs.ext.ExceptionMapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
